--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div>cool test</div>
+    <div> <a href="">cool test</a></div>
 
     <script src="04_04.04.25_getImage  .js"> </script>
 
