--- a/index.html
+++ b/index.html
@@ -1,17 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>new_019</title>
+    <meta charset="utf-8">
+    <!-- Compiled w/ P5LIVE, http://github.com/ffd8/p5live -->
+    <style type="text/css">
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+
+        canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
+    <script type="text/javascript">
+        // eco-mode = only render if window focused
+        window.onblur = function () {
+            noLoop();
+        };
+        window.onfocus = function () {
+            loop();
+        };
+    </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/gh/processing/p5.js-sound/lib/p5.sound.min.js"></script>
 </head>
 
-<body>
-    <div> <a href="">cool test</a></div>
+<body style="background: rgb(0, 0, 0);">
 
-    <script src="04_04.04.25_getImage  .js"> </script>
+    <script type="text/javascript">
+        //new_019
+
+        /* CUSTOM FUNCTIONS FOR P5LIVE */
+        // keep fullscreen if window resized
+        function windowResized() {
+            resizeCanvas(windowWidth, windowHeight);
+        }
+
+        // custom ease function
+        function ease(iVal, oVal, eVal) {
+            return oVal += (iVal - oVal) * eVal;
+        }
+
+        // processing compatibility
+        function println(msg) {
+            print(msg);
+        }
+
+
+        function setup() {
+            createCanvas(windowWidth, windowHeight)
+
+
+            sliderFill = createSlider(0, 255, 128, .1) // min, max, dfault, val, step size
+            sliderFill.position(width / 2, 25)
+        }
+
+        function draw() {
+            background(sliderFill.value())
+            fill(sliderFill.value() / 2)
+            rect(0, 0, width, height / 2)
+        }
+    </script>
 
 </body>
 
